tests/health/gold/sdk/tests__tls-no-net-test.toit.gold
tests/tls-no-net-test.toit:56:7: error: Non-abstract class 'Reader' is missing implementations
class Reader extends Object with io.CloseableReader:
      ^~~~~~
<sdk>/io.toit:894:12: note: Missing implementation for 'content-size'
  abstract content-size -> int?
           ^~~~~~~~~~~~
